Add all new topics in Frontend, adapt colors and different Analysis - count format. Add try catches for different map and chart dcenarios depending on topic

--- a/frontend/assets/scss/style.css
+++ b/frontend/assets/scss/style.css
@@ -1439,6 +1439,9 @@ header .form-inline {
     color: #868e96;
     font-family: 'Open Sans';
     font-size: 12px; }
+  #flotPie1 .table .element.style{
+    width: 160px;
+  }
 
 /* Stats Table */
 .table-stats table {
